# advent-of-code

./: LICENSE  aoc.py  pyproject.toml
2021/: aoc.py
2021/src/: base.py  day1.py  day3.py  day5.py
2021/tests/: test_day1.py  test_day2.py  test_day4.py  test_day5.py
2022/: day1.py  day2.py  day3.py  day4.py  day5.py  day6.py
src/: day2.py  day4.py
tests/: test_day3.py
