[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["fullybaked <david@fullybaked.co.uk>"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.0.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
mypy = "^0.910"
black = "^21.11b1"
flake8 = "^4.0.1"
flake8-bugbear = "^21.11.29"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
